fixed overflow in index

--- a/css-files/style.css
+++ b/css-files/style.css
@@ -217,24 +217,6 @@ html.active, body.active {
         font-size: 5rem;
         font-family: "Teko Bold", sans-serif;
     }
-
-    #mobile-nav-links {
-        height: 90vh;
-        background-color: #3b425c;
-        display: flex;
-        justify-content: center;
-    }
-    #mobile-nav-links ul {
-        height: 80%;
-        display: flex;
-        justify-content: space-around;
-        flex-direction: column;
-        text-align: center;
-    }
-
-    #mobile-nav-links ul a {
-        font-size: clamp(2rem, 10rem, 20rem);
-    }
     
     .plot-scrn__content__unordered-list__item {
         font-size: 4rem;
@@ -418,16 +400,24 @@ html.active, body.active {
         left: 50vh;
         z-index: 50;
     }
+
     #video {
-        width: 100vw;
+        /* width: 100vw; */
         filter: brightness(40%);
         z-index: 0;
         display: none;
     }
+
+    .index-content {
+        background-color: rgb(23, 21, 27);
+        padding: 1%;
+    }
+
     .index-content__plot-section {
-        height: auto;
+        /* height: auto; */
         display: flex;
         background-color: #25272f;
+        margin: 2%;
     }
     .index-content__poster-div {
         height: 40vh;
@@ -435,12 +425,12 @@ html.active, body.active {
     }
     .index-content__poster-div__img {
         height: 80%;
-        width: auto;
+        /* width: auto; */
         margin-left: 15%;
         margin-top: 10%;        
     }
     .index-content__plot-information-div__text {
-        height: auto;
+        /* height: auto; */
         width: 50%;
         margin-top: 3rem;
         margin-right: 2rem;
@@ -457,7 +447,7 @@ html.active, body.active {
     .index-content__general-information-div__text {
         display: flex;
         width: 25%;
-        height: auto;
+        /* height: auto; */
         margin-top: 3rem;
     }
     .index-content__general-information-div__text h2 {
@@ -472,15 +462,15 @@ html.active, body.active {
         margin-right: 2rem;
     }
     .index-content__cast-div {
-        background-color:rgb(23, 21, 27);
+        background-color:#25272f;
         display: grid;
-        width: 100%;
-        height: auto;
         padding: 5% 10%;
+        margin: 2%;
     }
     .index-content__cast-div__header {
         font-size: 4rem;
         margin-left: 3rem;
+        width: max-content;
     }
     .index-content__cast-div__members-div {
         display: flex;
@@ -499,21 +489,21 @@ html.active, body.active {
     }
     .index-content__cast-dive__actor-div__text-head {
         margin: 0% 5%;
-        font-family: "Times New Roman";
+        /* font-family: "Times New Roman"; */
         font-weight: bold;
         font-size: 2.5rem;
         text-decoration: none;
     }
     .index-content__cast-dive__actor-div__text-p {
         margin: 0% 5%;
-        font-family: "Times New Roman";
+        /* font-family: "Times New Roman"; */
         font-weight: 200;
         font-size: 1.8rem;
         text-decoration: none;
         color: rgb(188, 183, 183);
     }
     .blankDiv {
-        max-width: 100vw;
+        /* max-width: 100vw; */
         height: 80vh;
         background-color:rgb(23, 21, 27);
     }
